--- a/robby.html
+++ b/robby.html
@@ -20,7 +20,52 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">1</a>]
+[<a name="McKilliam_asrp_phase_2012">1</a>]
+</td>
+<td class="bibtexitem">
+A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechner, I.&nbsp;Land, R.&nbsp;G.
+  McKilliam, A.&nbsp;Pollok, and L.&nbsp;Davis.
+ Communication system and method.
+ Provisional Patent: AU 2012904130, 2013.
+[&nbsp;<a href="robby_bib.html#McKilliam_asrp_phase_2012">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_asrp_phase_patent_2012">2</a>]
+</td>
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
+ Carrier phase and amplitude estimation for phase shift keying using
+  pilots and data.
+ Provisional Patent: AU 2012905489, 2013.
+[&nbsp;<a href="robby_bib.html#McKilliam_asrp_phase_patent_2012">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">3</a>]
+</td>
+<td class="bibtexitem">
+R.&nbsp;McKilliam and A.&nbsp;Pollok.
+ On the Cram&eacute;r–Rao bound for polynomial phase signals.
+ <em>Signal Processing</em>, 95:27-31, Feb. 2014.
+[&nbsp;<a href="robby_bib.html#McKilliam_Pollock_CRB_polyphase_2013">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1016/j.sigpro.2013.08.007">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">4</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -35,13 +80,14 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">2</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">5</a>]
 </td>
 <td class="bibtexitem">
-R.&nbsp;G. McKilliam, Andre Pollok, Bill Cowley, Vaughan Clarkson, and Barry Quinn.
+R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
  Carrier phase and amplitude estimation for phase shift keying using
   pilots and data.
- submitted to IEEE Transactions on Signal Processing, Jan. 2013.
+ submitted to IEEE Transactions on Signal Processing, preprint
+  available http://arxiv.org/abs/1301.1760, Jan. 2013.
 [&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKpilotsdata_2012">bib</a>&nbsp;]
 
 </td>
@@ -50,13 +96,27 @@ R.&nbsp;G. McKilliam, Andre Pollok, Bill Cowley, Vaughan Clarkson, and Barry Qui
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">3</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">6</a>]
+</td>
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
+ Time offset estimation using pilots and data.
+ submitted to IEEE Transactions on Communications, Mar. 2013.
+[&nbsp;<a href="robby_bib.html#McKilliam_time_offset_pilots_data_2013">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">7</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
  Noncoherent least squares estimators of carrier phase and amplitude.
- accepted to IEEE Internat. Conf. Acoust. Spe. Sig. Process., May
-  2013.
+ In <em>IEEE Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
+  4888-4892, May 2013.
 [&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKnoncoICASSP_2012">bib</a>&nbsp;]
 
 </td>
@@ -65,7 +125,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkso
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">4</a>]
+[<a name="Quinn_sparse_noisy_SSP_2012">8</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -81,7 +141,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polycrbs_2012">5</a>]
+[<a name="McKilliam_polycrbs_2012">9</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
@@ -95,7 +155,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">6</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -114,7 +174,7 @@ Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;po
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">7</a>]
+[<a name="McKilliam_error_prob_An2012">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Clarkson.
@@ -129,7 +189,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Cla
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">8</a>]
+[<a name="McKilliam_direstcro_dasp_2011">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -143,7 +203,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">9</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -160,7 +220,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">10</a>]
+[<a name="McKilliam2007">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -176,7 +236,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">11</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -196,7 +256,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">12</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -211,7 +271,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">13</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -227,7 +287,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6363913">14</a>]
+[<a name="6363913">18</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -247,13 +307,14 @@ Keywords: Monte Carlo methods;channel coding;code division multiple access;inter
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn20013asilomar_period_est">15</a>]
+[<a name="Quinn20013asilomar_period_est">19</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
  On the periodogram estimator of period from sparse, noisy timing
   data.
- 2013.
+ accepted to Asilomar Conference on Signals, Systems, and Computers,
+  2013.
 [&nbsp;<a href="robby_bib.html#Quinn20013asilomar_period_est">bib</a>&nbsp;]
 
 </td>
@@ -262,7 +323,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">16</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -277,7 +338,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">17</a>]
+[<a name="McKilliam2006">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -292,7 +353,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">18</a>]
+[<a name="McKilliam2008">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -308,7 +369,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">19</a>]
+[<a name="McKilliam2008b">23</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -324,7 +385,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">20</a>]
+[<a name="McKilliam2008a">24</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -341,7 +402,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">21</a>]
+[<a name="McKilliam2009CoxeterLattices">25</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -359,7 +420,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">22</a>]
+[<a name="McKilliam2010thesis">26</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -374,7 +435,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">23</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">27</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -395,7 +456,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">24</a>]
+[<a name="Quinn2008maximizing_the_periodogram">28</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -413,7 +474,7 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">25</a>]
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">29</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
