--- a/robby_bib.html
+++ b/robby_bib.html
@@ -17,6 +17,37 @@
 @comment{{Command line: /usr/bin/bib2bib -oc robbycites -ob robby.bib -c author:"McKilliam" bib.bib}}
 </pre>
 
+<a name="McKilliam_asrp_phase_2012"></a><pre>
+@misc{<a href="robby.html#McKilliam_asrp_phase_2012">McKilliam_asrp_phase_2012</a>,
+  author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis},
+  title = {Communication system and method},
+  howpublished = {Provisional Patent: AU 2012904130},
+  year = 2013
+}
+</pre>
+
+<a name="McKilliam_asrp_phase_patent_2012"></a><pre>
+@misc{<a href="robby.html#McKilliam_asrp_phase_patent_2012">McKilliam_asrp_phase_patent_2012</a>,
+  author = {R. G. McKilliam and A. Pollok and B. Cowley},
+  title = {CARRIER PHASE AND AMPLITUDE ESTIMATION FOR PHASE SHIFT KEYING USING PILOTS AND DATA},
+  howpublished = {Provisional Patent: AU 2012905489},
+  year = 2013
+}
+</pre>
+
+<a name="McKilliam_Pollock_CRB_polyphase_2013"></a><pre>
+@article{<a href="robby.html#McKilliam_Pollock_CRB_polyphase_2013">McKilliam_Pollock_CRB_polyphase_2013</a>,
+  author = {R. McKilliam and A. Pollok},
+  title = {On the {Cram\'{e}r–Rao} bound for polynomial phase signals},
+  journal = {Signal Processing},
+  volume = 95,
+  pages = {27-31},
+  year = 2014,
+  month = {Feb.},
+  doi = {10.1016/j.sigpro.2013.08.007}
+}
+</pre>
+
 <a name="McKilliam_mean_dir_est_sq_arc_length2010"></a><pre>
 @article{<a href="robby.html#McKilliam_mean_dir_est_sq_arc_length2010">McKilliam_mean_dir_est_sq_arc_length2010</a>,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
@@ -33,28 +64,39 @@
 
 <a name="McKilliam_leastsqPSKpilotsdata_2012"></a><pre>
 @unpublished{<a href="robby.html#McKilliam_leastsqPSKpilotsdata_2012">McKilliam_leastsqPSKpilotsdata_2012</a>,
-  author = {R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
+  author = {R. G. McKilliam and A. Pollok and B. Cowley and V. Clarkson and B. Quinn},
   title = {Carrier phase and amplitude estimation for phase shift keying using pilots and data},
-  note = {submitted to IEEE Transactions on Signal Processing},
+  note = {submitted to IEEE Transactions on Signal Processing, preprint available http://arxiv.org/abs/1301.1760},
   year = 2013,
   month = {Jan.}
 }
 </pre>
 
+<a name="McKilliam_time_offset_pilots_data_2013"></a><pre>
+@unpublished{<a href="robby.html#McKilliam_time_offset_pilots_data_2013">McKilliam_time_offset_pilots_data_2013</a>,
+  author = {R. G. McKilliam and A. Pollok and B. Cowley},
+  title = {Time offset estimation using pilots and data},
+  note = {submitted to IEEE Transactions on Communications},
+  year = 2013,
+  month = {Mar.}
+}
+</pre>
+
 <a name="McKilliam_leastsqPSKnoncoICASSP_2012"></a><pre>
-@unpublished{<a href="robby.html#McKilliam_leastsqPSKnoncoICASSP_2012">McKilliam_leastsqPSKnoncoICASSP_2012</a>,
+@inproceedings{<a href="robby.html#McKilliam_leastsqPSKnoncoICASSP_2012">McKilliam_leastsqPSKnoncoICASSP_2012</a>,
   author = {R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
   title = {Noncoherent least squares estimators of carrier phase and amplitude},
-  note = {accepted to {IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
+  booktitle = {{IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
   year = 2013,
-  month = {May}
+  month = {May},
+  pages = {4888-4892}
 }
 </pre>
 
 <a name="Quinn_sparse_noisy_SSP_2012"></a><pre>
 @inproceedings{<a href="robby.html#Quinn_sparse_noisy_SSP_2012">Quinn_sparse_noisy_SSP_2012</a>,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  booktitle = {IEEE Statistical Signal Processing Workshop (SSP)},
+  booktitle = {{IEEE} Statistical Signal Processing Workshop {(SSP)}},
   title = {Estimating period from sparse, noisy timing data},
   year = 2012,
   month = {Aug.},
@@ -201,7 +243,7 @@
 @unpublished{<a href="robby.html#Quinn20013asilomar_period_est">Quinn20013asilomar_period_est</a>,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
-  notes = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  note = {accepted to Asilomar Conference on Signals, Systems, and Computers},
   year = 2013
 }
 </pre>
