--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -57,6 +57,7 @@ Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/practica
 <td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/4880d690-0a71-40c7-8707-ce835802fa2a/media.m4v">5</a></td>
 <td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/99e92505-a454-4638-bc16-9f482718de41/media.m4v">6</a></td>
 <td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/348dd47d-d4bd-49ca-b886-cb1a50809e69/media.m4v">7</a></td>
+<td><a href="http://lrs.unisa.edu.au/ess/echo/presentation/6d82e8f2-6f4f-48ef-a4d2-4b77d5e77b92/media.m4v">8</a></td>
 </tr>
 </table>
 
