added to marks and index, some spacing issures

--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -31,7 +31,7 @@ Lecture notes and corresponding software will be added to this website as the co
 </table>
 
 <br>
-<table cellpadding="0" cellspacing="0" width="500">
+<table cellpadding="0" cellspacing="0" width="700">
 <tr valign="top">
 <td>
 <a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystems.pdf">Lecture notes</a>
@@ -43,7 +43,7 @@ Lecture notes and corresponding software will be added to this website as the co
 Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/practical.pdf">practical</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/theoryassignment.pdf">theory</a>
 </td>
 <td>
-Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/practical.pdf">marks</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/markstats.pdf">stats</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/stats.R">R</a>
+Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/marks.csv">marks</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/markstats.pdf">stats</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/stats.R">R</a>
 </td>
 </tr>
 </table>
