--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -34,7 +34,7 @@ Lecture notes and corresponding software will be added to this website as the co
 <table cellpadding="0" cellspacing="0" width="700">
 <tr valign="top">
 <td>
-<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystems.pdf">Lecture notes</a>&nbsp;<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystemswithsolutions.pdf">(with solutions)</a>
+<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystems.pdf">Lecture notes</a>&nbsp;<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystemswithsolutions.pdf">(solutions)</a>
 </td>
 <td>
 <a href="http://robbymckilliam.github.io/signalsandsystems/test.zip">Software</a>
