--- a/notindex.html
+++ b/notindex.html
@@ -128,7 +128,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 <td class="bibtexitem">
 B.&nbsp;G.&nbsp;Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G.&nbsp;McKilliam.
  On the Periodogram Estimator of Period from Sparse, Noisy Timing Data.
- accepted to Asilomar Conference on Signals, Systems, and Computers, Nov.
+ Asilomar Conference on Signals, Systems, and Computers, Nov.
   2013.
 [&nbsp;<a href="robby_bib.html#Quinn20013asilomar_period_est">bib</a>&nbsp;]
 </td>
@@ -138,11 +138,22 @@ B.&nbsp;G.&nbsp;Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G.&nbsp;McKillia
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
  Noncoherent least squares estimators of carrier phase and amplitude.
- accepted to IEEE Internat. Conf. Acoust. Spe. Sig. Process., May
+ IEEE Internat. Conf. Acoust. Spe. Sig. Process., pages 4888-4892, May
   2013.
 [&nbsp;<a href="robby_bib.html#McKilliam_leastsqPSKnoncoICASSP_2012">bib</a>&nbsp;]
 </td>
 </tr>
+
+<tr valign="top">
+<td class="bibtexitem">
+J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
+ Decoder-aided synchronization for multiuser CDMA systems.
+ In <em>in Proc. Australian Commun. Theory Workshop</em>,
+  pages 31-36, Jan. 2013.
+[&nbsp;<a href="robby_bib.html#6510040">bib</a>&nbsp;|<a href="http://dx.doi.org/10.1109/AusCTW.2013.6510040">doi</a>&nbsp;]
+</td>
+</tr>
+
 
 <tr valign="top">
 <td class="bibtexitem">
