--- a/notindex.html
+++ b/notindex.html
@@ -39,8 +39,7 @@ Robby McKilliam is a post doc at the Institute for Telecommunications Research a
 
 <b>Thesis </b>
 <table cellpadding="4" cellspacing="0" width="600" >
-	<tr valign="top">
-		<td>
+<td class="bibtexitem">
 		R.&nbsp;G. McKilliam.
   <em>Lattice theory, circular statistics and polynomial phase
   signals</em>.
@@ -391,8 +390,8 @@ Next to many of the papers listed above is a link named `code'.  This links to a
 <br>
 <b>Other Activities</b>
 <table>
-<tr valign="top"><td> Local Finance Chair, Information Theory Workshop (ITW), Hobart 2014</td></tr>
-<tr valign="top"><td> Local Finance Chair, Internation Symposium on Information Theory and it Applications (ISITA), Melbourne 2014</td></tr>
+<tr valign="top"><td>Local Finance Chair, Information Theory Workshop (ITW), Hobart 2014</td></tr>
+<tr valign="top"><td>Local Finance Chair, International Symposium on Information Theory and it Applications (ISITA), Melbourne 2014</td></tr>
 <tr valign="top"><td>Technical Programme Chair, Australian Communications Theory Workshop (AusCTW), Adelaide 2013</td></tr>
 <tr valign="top"><td>Technical Programme Committee, Australian Communications Theory Workshop (AusCTW), Wellington 2012</td></tr>
 <tr valign="top"><td>Publications Co-Chair, Defense Applications of Signal Processing Workshop (DASP), Coolum 2011</td></tr>
