--- a/notindex.html
+++ b/notindex.html
@@ -56,6 +56,16 @@ Robby McKilliam is a post doc at the Institute for Telecommunications Research a
 
 <tr valign="top">
 <td class="bibtexitem">
+R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
+ Time offset estimation using pilots and data.
+ accepted to <em>IEEE Transactions on Communications</em>, Jan. 2014.
+[&nbsp;<a href="robby_bib.html#McKilliam_time_offset_pilots_data_2013">bib</a>&nbsp;]
+</td>
+</tr>
+
+
+<tr valign="top">
+<td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
  On the Cram&eacute;r-Rao bound for polynomial phase signals. <em>Signal Processing</em>, 95:27-31, Feb. 2014. 
 [&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1016/j.sigpro.2013.08.007">doi</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
