--- a/robby.html
+++ b/robby.html
@@ -18,7 +18,25 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6510040">1</a>]
+[<a name="Haley_sdr_asrp_winncomm">1</a>]
+</td>
+<td class="bibtexitem">
+David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Marc
+  Lavenant, S.&nbsp;Adrian Barbulescu, John Buetefuer, William&nbsp;G. Cowley, Alex
+  Grant, Terry Kemp, Ingmar Land, Rick Luppino, Robby McKilliam, and Hidayat
+  Soetiyono.
+ Software defined radio based global sensor network architecture.
+ In <em>Wireless Innovation Forum Conference on Communications
+  Technologies and Software Defined Radio</em>, 2014.
+[&nbsp;<a href="robby_bib.html#Haley_sdr_asrp_winncomm">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="6510040">2</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -37,7 +55,7 @@ Keywords: Monte Carlo methods;code division multiple access;decoding;interferenc
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_2012">2</a>]
+[<a name="McKilliam_asrp_phase_2012">3</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechner, I.&nbsp;Land, R.&nbsp;G.
@@ -52,7 +70,7 @@ A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechne
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_patent_2012">3</a>]
+[<a name="McKilliam_asrp_phase_patent_2012">4</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
@@ -67,7 +85,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_Pollock_CRB_polyphase_2013">4</a>]
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">5</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam and A.&nbsp;Pollok.
@@ -82,7 +100,7 @@ R.&nbsp;McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">5</a>]
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">6</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -97,7 +115,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">6</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">7</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
@@ -113,12 +131,12 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_time_offset_pilots_data_2013">7</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">8</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
  Time offset estimation using pilots and data.
- submitted to IEEE Transactions on Communications, Mar. 2013.
+ accepted to IEEE Transactions on Communications, Jan. 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_time_offset_pilots_data_2013">bib</a>&nbsp;]
 
 </td>
@@ -127,7 +145,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">8</a>]
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">9</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Quinn.
@@ -142,7 +160,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkso
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">9</a>]
+[<a name="Quinn_sparse_noisy_SSP_2012">10</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -151,20 +169,6 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
   193-196, Aug. 2012.
 [&nbsp;<a href="robby_bib.html#Quinn_sparse_noisy_SSP_2012">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/SSP.2012.6319657">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="McKilliam_polycrbs_2012">10</a>]
-</td>
-<td class="bibtexitem">
-R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
- On the Cram&eacute;r-Rao bound for polynomial phase signals.
- submitted to IEEE Signal Processing Letters, Aug 2012.
-[&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp;]
 
 </td>
 </tr>
