--- a/robby.html
+++ b/robby.html
@@ -135,7 +135,8 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
- Time offset estimation using pilots and data.
+ Simultaneous symbol timing and frame synchronization for phase shift
+  keying.
  accepted to IEEE Transactions on Communications, Jan. 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_time_offset_pilots_data_2013">bib</a>&nbsp;]
 
