--- a/robby_bib.html
+++ b/robby_bib.html
@@ -95,7 +95,7 @@
 <a name="McKilliam_time_offset_pilots_data_2013"></a><pre>
 @unpublished{<a href="robby.html#McKilliam_time_offset_pilots_data_2013">McKilliam_time_offset_pilots_data_2013</a>,
   author = {R. G. McKilliam and A. Pollok and B. Cowley},
-  title = {Time offset estimation using pilots and data},
+  title = {Simultaneous symbol timing and frame synchronization for phase shift keying},
   note = {accepted to IEEE Transactions on Communications},
   year = 2014,
   month = {Jan.}
