--- a/robby.html
+++ b/robby.html
@@ -496,7 +496,21 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">30</a>]
+[<a name="McKilliam_pps_unwrapping_tsp_2014">30</a>]
+</td>
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
+ Polynomial phase estimation by least squares phase unwrapping.
+ accepted to IEEE Transactions on Signal Processing, Jan. 2014.
+[&nbsp;<a href="robby_bib.html#McKilliam_pps_unwrapping_tsp_2014">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">31</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
