--- a/robby_bib.html
+++ b/robby_bib.html
@@ -387,6 +387,16 @@
 }
 </pre>
 
+<a name="McKilliam_pps_unwrapping_tsp_2014"></a><pre>
+@unpublished{<a href="robby.html#McKilliam_pps_unwrapping_tsp_2014">McKilliam_pps_unwrapping_tsp_2014</a>,
+  author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
+  title = {Polynomial phase estimation by least squares phase unwrapping},
+  notes = {accepted to IEEE Trans. Signal Processing},
+  year = {2014},
+  month = {Jan.}
+}
+</pre>
+
 <a name="McKilliam_arxiv_pps_unwrapping_2012"></a><pre>
 @article{<a href="robby.html#McKilliam_arxiv_pps_unwrapping_2012">McKilliam_arxiv_pps_unwrapping_2012</a>,
   author = {R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
