--- a/signalsandsystems/tobeindex.html
+++ b/signalsandsystems/tobeindex.html
@@ -31,24 +31,25 @@ Lecture notes and corresponding software will be added to this website as the co
 </table>
 
 <br>
-<table cellpadding="0" cellspacing="0" width="700">
-<tr valign="top">
+<table cellpadding="10" cellspacing="5" width="700">
+<tr valign="top", align="left">
 <td>
-<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystems.pdf">Lecture notes</a>&nbsp;<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystemswithsolutions.pdf">(solutions)</a>
+<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystems.pdf">Lecture notes</a>&nbsp;<a href="http://robbymckilliam.github.io/signalsandsystems/signalsandsystemswithsolutions.pdf">(with solutions)</a>
 </td>
 <td>
 <a href="http://robbymckilliam.github.io/signalsandsystems/test.zip">Software</a>
 </td>
+</tr>
+<tr valign="top", align="left">
 <td>
 Assignments: <a href="http://robbymckilliam.github.io/signalsandsystems/practical.pdf">practical</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/theoryassignment.pdf">theory</a>
 </td>
 <td>
-Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/marks.csv">marks</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/markstats.pdf">stats</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/stats.R">R</a>
+Marks: <a href="http://robbymckilliam.github.io/signalsandsystems/marks.csv">marks</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/markstats.pdf">stats</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/stats.R">R</a>, <a href="http://robbymckilliam.github.io/signalsandsystems/top10.pdf">top 10</a>
 </td>
 </tr>
 </table>
 
-<br>
 <table cellpadding="10" cellspacing="0">
 <tr valign="top" align="left">
 <td>Videos: </td>
